feat(ACC-650): policy set version resource
